# auto_whats

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scratch/: reconnect.py  register_webhook.py
scripts/: reconnect.py  seed_products.py  test_ia_router.py  test_takeover.py
src/: __init__.py  admin.py  agent.py  agent_graph.py  client.py  database.py  main.py  models.py  test_send.py
src/api/: admin_router.py  webhook_router.py
src/core/: cache.py  database.py
src/models/: domain.py
src/schemas/: dtos.py
src/services/: bot_engine.py  whatsapp.py
src/static/admin/: index.html
tests/: __init__.py  test_webhook.py
