[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-whats"
version = "0.1.0"
description = "Ecosistema de automatización de WhatsApp con OpenWA y Python FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[project.scripts]
auto-whats = "src.main:start"
test-send = "src.test_send:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
