[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-whats"
version = "0.1.0"
description = "Ecosistema de automatización de WhatsApp con OpenWA y Python FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "redis>=5.0.0",
    # === ECOSISTEMA AVANZADO DE LANGCHAIN ===
    "langgraph>=0.2.0",
    "langserve[all]>=0.3.0",
    "sse-starlette>=1.3.0,<2.0.0",
]

[project.scripts]
auto-whats = "src.main:start"
test-send = "tests.test_send:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
ignore = ["E402"]
